--- a/web/css/jquery.treeview.css
+++ b/web/css/jquery.treeview.css
@@ -99,15 +99,15 @@
 }
 
 #folder_panel{
-    border: 1px solid #CCCCCC;
+    border: 1px solid #FFFFFF;
     overflow: auto;
     position: relative;
     width: 100%;
 }
 
-#folder_heading{
-    background-color: #B9B9B9;
-    color: #FFFFFF;
+#folder_heading{    
+    background-color: #F1F1F1;
+    color: #7E7E7E;
     font-size: 12px;
     font-weight: normal;
     height: 30px;
@@ -145,7 +145,7 @@
     float: left;
     height: 20px;
     padding: 2px 5px 0 7px;
-    width: 510px;
+    width: 440px;
 }
 
 #folder_heading_size{
@@ -158,24 +158,25 @@
 
 #folder_heading_date_modified{
     border-left: 1px solid #FFFFFF;
+    border-right: 1px solid #FFFFFF;
     float: left;
     height: 20px;
     padding: 5px;
-    width: 150px;
+    width: 146px;
 }
 
 .folder_actual_name{
     float: left;
     height: 20px;
     padding: 5px 5px 0 7px;
-    width: 510px;
+    width: 440px;
 }
 
 .file_actual_name{
     float: left;
     height: 20px;
     padding: 2px 5px 0 7px;
-    width: 510px;
+    width: 440px;
 }
 
 .current_directory{    
@@ -191,17 +192,17 @@ li.selected{
 }
 
 #folder_actual_content .odd{
-    background-color: #F3F3F3;
+    background-color: #F8F8F8;
     border-top: 1px solid #FFFFFF;
 }
 
 #folder_actual_content .even{
-    background-color: #E9E9E9;
+    background-color: #F9F9F9;
     border-top: 1px solid #FFFFFF;
 }
 
 #folder_actual_content .added{
-    background-color: #A3DB67 !important;
+    background-color: #DEFFBA !important;
 }
 
 .folder_actual_name span{
@@ -271,10 +272,11 @@ li.selected{
 
 .folder_actual_date_modified{
     border-left: 1px solid #FFFFFF;
+    border-right: 1px solid #FFFFFF;
     float: left;
     height: 15px;
     padding: 5px;
-    width: 150px;
+    width: 146px;
 }
 
 .file_actual_size{
