Modified the calendar section

--- a/web/css/jquery-ui.css
+++ b/web/css/jquery-ui.css
@@ -63,7 +63,7 @@
     font-size: 1em;
 }
 .ui-widget-content {
-    border: 1px solid #4D90FE;
+    border: 1px solid #134D58;
     margin-top: -1px;
 }
 .ui-widget-content a {
