--- a/web/css/profile.css
+++ b/web/css/profile.css
@@ -586,3 +586,113 @@ span.green{
     width: 340px;
     float: left;
 }
+
+.peer-open, .peer-suggested, .peer-declined{
+    border-radius: 3px;
+    background-color: #DD4B39;
+    background-image: -webkit-gradient(linear,left top,left bottom,from(#DD4B39),to(#D14836));
+    background-image: -webkit-linear-gradient(top,#DD4B39,#D14836);
+    background-image: -moz-linear-gradient(top,#DD4B39,#D14836);
+    background-image: -ms-linear-gradient(top,#DD4B39,#D14836);
+    background-image: -o-linear-gradient(top,#DD4B39,#D14836);
+    background-image: linear-gradient(top,#DD4B39,#D14836);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorStr='#DD4B39',EndColorStr='#D14836');
+    border: 1px solid #D14836;
+    color: white !important;
+    font-size: 11px;
+    padding: 1px 10px !important;
+}
+
+.peer-open:hover, .peer-suggested:hover, .peer-declined:hover{
+    background-color: #D14836;
+    background-image: -webkit-gradient(linear,left top,left bottom,from(#D14836),to(#DD4B39));
+    background-image: -webkit-linear-gradient(top,#D14836,#DD4B39);
+    background-image: -moz-linear-gradient(top,#D14836,#DD4B39);
+    background-image: -ms-linear-gradient(top,#D14836,#DD4B39);
+    background-image: -o-linear-gradient(top,#D14836,#DD4B39);
+    background-image: linear-gradient(top,#D14836,#DD4B39);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorStr='#D14836',EndColorStr='#DD4B39');
+}
+
+.peer-accept{
+    border-radius: 3px;
+    background-color: #FBB60F;
+    background-image: -webkit-gradient(linear,left top,left bottom,from(#FBB60F),to(#FFA500));
+    background-image: -webkit-linear-gradient(top,#FBB60F,#FFA500);
+    background-image: -moz-linear-gradient(top,#FBB60F,#FFA500);
+    background-image: -ms-linear-gradient(top,#FBB60F,#FFA500);
+    background-image: -o-linear-gradient(top,#FBB60F,#FFA500);
+    background-image: linear-gradient(top,#FBB60F,#FFA500);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorStr='#FBB60F',EndColorStr='#FFA500');
+    border: 1px solid #FBB60F;
+    color: white !important;
+    font-size: 11px;
+    padding: 1px 10px !important;
+}
+
+.peer-accept:hover{
+    background-color: #FFA500;
+    background-image: -webkit-gradient(linear,left top,left bottom,from(#FFA500),to(#FBB60F));
+    background-image: -webkit-linear-gradient(top,#FFA500,#FBB60F);
+    background-image: -moz-linear-gradient(top,#FFA500,#FBB60F);
+    background-image: -ms-linear-gradient(top,#FFA500,#FBB60F);
+    background-image: -o-linear-gradient(top,#FFA500,#FBB60F);
+    background-image: linear-gradient(top,#FFA500,#FBB60F);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorStr='#FFA500',EndColorStr='#FBB60F');
+}
+
+.peer-peered{
+    border-radius: 3px;
+    background-color: #3D9400;
+    background-image: -webkit-gradient(linear,left top,left bottom,from(#3D9400),to(#398A00));
+    background-image: -webkit-linear-gradient(top,#3D9400,#398A00);
+    background-image: -moz-linear-gradient(top,#3D9400,#398A00);
+    background-image: -ms-linear-gradient(top,#3D9400,#398A00);
+    background-image: -o-linear-gradient(top,#3D9400,#398A00);
+    background-image: linear-gradient(top,#3D9400,#398A00);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorStr='#3D9400',EndColorStr='#398A00');
+    border: 1px solid #398A00;
+    color: white !important;
+    font-size: 11px;
+    padding: 1px 10px !important;
+    cursor: default !important;
+}
+
+.peer-peered:hover{
+    background-color: #398A00;
+    background-image: -webkit-gradient(linear,left top,left bottom,from(#398A00),to(#3D9400));
+    background-image: -webkit-linear-gradient(top,#398A00,#3D9400);
+    background-image: -moz-linear-gradient(top,#398A00,#3D9400);
+    background-image: -ms-linear-gradient(top,#398A00,#3D9400);
+    background-image: -o-linear-gradient(top,#398A00,#3D9400);
+    background-image: linear-gradient(top,#398A00,#3D9400);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorStr='#398A00',EndColorStr='#3D9400');
+}
+
+.peer-invited{
+    border-radius: 3px;
+    background-color: #D2D2D2;
+    background-image: -webkit-gradient(linear,left top,left bottom,from(#D2D2D2),to(#D7D7D7));
+    background-image: -webkit-linear-gradient(top,#D2D2D2,#D7D7D7);
+    background-image: -moz-linear-gradient(top,#D2D2D2,#D7D7D7);
+    background-image: -ms-linear-gradient(top,#D2D2D2,#D7D7D7);
+    background-image: -o-linear-gradient(top,#D2D2D2,#D7D7D7);
+    background-image: linear-gradient(top,#D2D2D2,#D7D7D7);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorStr='#D2D2D2',EndColorStr='#D7D7D7');
+    border: 1px solid #D2D2D2;
+    color: white !important;
+    font-size: 11px;
+    padding: 1px 10px !important;
+    cursor: default !important;
+}
+
+.peer-invited:hover{
+    background-color: #D7D7D7;
+    background-image: -webkit-gradient(linear,left top,left bottom,from(#D7D7D7),to(#D2D2D2));
+    background-image: -webkit-linear-gradient(top,#D7D7D7,#D2D2D2);
+    background-image: -moz-linear-gradient(top,#D7D7D7,#D2D2D2);
+    background-image: -ms-linear-gradient(top,#D7D7D7,#D2D2D2);
+    background-image: -o-linear-gradient(top,#D7D7D7,#D2D2D2);
+    background-image: linear-gradient(top,#D7D7D7,#D2D2D2);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorStr='#D7D7D7',EndColorStr='#D2D2D2');
+}
