Added and modified a lot of files

--- a/web/css/discussion.css
+++ b/web/css/discussion.css
@@ -373,7 +373,7 @@ span.separator{
 }
 
 .comment{
-    padding: 10px 0 0 10px;
+    padding: 10px 0 5px 10px;
     border-bottom: 1px solid #FFFFFF;
 }
 
