--- a/web/css/symfony.css
+++ b/web/css/symfony.css
@@ -208,7 +208,7 @@ ul.sf_admin_td_actions li.sf_admin_action_delete{
     border-radius: 4px 4px 4px 4px;
     background-color: #DEFFBA;
     font-size: 12px;
-    padding: 5px 0 4px 30px;
+    padding: 5px 30px;
     text-align: center;
     color: #134D58;
     margin-bottom: 10px;
