--- a/web/css/profile.css
+++ b/web/css/profile.css
@@ -522,7 +522,10 @@ span.green{
     margin: 5px 5px 0 0;
     padding: 10px 0 10px 10px;
     width: 158px;
-    word-break: break-all;
+    word-break: break-all;    
+    -webkit-box-shadow: 0 2px 3px rgba(0, 0, 0, .1);
+    -moz-box-shadow: 0 2px 3px rgba(0,0,0,.1);
+    box-shadow: 0 2px 3px rgba(0, 0, 0, .1);
 }
 
 .last{
