--- a/web/css/tutorplus.css
+++ b/web/css/tutorplus.css
@@ -205,6 +205,7 @@
     color: #FFFFFF;
     display: inline;
     padding: 0 0 0 20px;
+    position: relative;
 }
 
 #header-links ul li a{
@@ -1113,9 +1114,9 @@
     right: 125px;
     position: absolute;
     top: 10px;
-    -webkit-border-radius: 3px;
-    -moz-border-radius: 3px;
-    border-radius: 3px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    border-radius: 5px;
     -webkit-box-shadow: 0 2px 4px rgba(0, 0, 0, .1);
     -moz-box-shadow: 0 2px 4px rgba(0,0,0,.1);
     box-shadow: 0 2px 4px rgba(0, 0, 0, .1);
@@ -1129,11 +1130,18 @@
 .menu-photo{
     -webkit-border-radius: 3px;
     -moz-border-radius: 3px;
-    border-radius: 3px;
+    border-radius: 3px !important;
     -webkit-box-shadow: 0 2px 3px rgba(0, 0, 0, .1);
     -moz-box-shadow: 0 2px 3px rgba(0,0,0,.1);
     box-shadow: 0 2px 3px rgba(0, 0, 0, .1);
     border: 1px solid #CCC;
+    padding: 2px 2px 0;
+    height: 26px;
+    display: inline-block;
+    position: absolute;
+    left: -15px;
+    top: -7px;
+    height: 26px !important;
 }
 
 .profile-photo-block{
@@ -1156,4 +1164,7 @@
 .photo-link{
     display: block;
     float: left;
+    margin-right: 7px;
+    border-radius: 5px;
+    overflow: hidden;
 }
