--- a/web/css/discussion.css
+++ b/web/css/discussion.css
@@ -170,7 +170,7 @@ span.separator{
 }
 
 #discussion_topic_message, #discussion_description{
-    width: 520px;
+    width: 520px !important;
     max-height: 400px;
     height: 150px;
 }
