--- a/web/css/email_message.css
+++ b/web/css/email_message.css
@@ -7,7 +7,7 @@ input[type="text"], input[type="password"] {
 }
 
 #sf_admin_container label{
-    width: 150px !important;
+    width: 97px !important;
 }
 
 #sf_admin_container textarea, input[type=text]{
@@ -182,6 +182,8 @@ span.separator {
 
 .recipient-field{
     position: relative;
+    clear: both;
+    min-height: 50px;
 }
 
 .message-recipient-input{
@@ -189,16 +191,27 @@ span.separator {
 }
 
 #to_email_recipients, #cc_email_recipients, #bcc_email_recipients{
-    display: inline-block;
-    width: 645px;
+    width: 580px;
     padding: 5px;
-    border: 1px solid #C0C0C0;
+    border: 1px solid white;
     max-height: 60px;
     overflow: auto;
+    position: absolute;
+    left: 91px;
+    top: -3px;
 }
 
 .choose-recipient{
     position: absolute;
-    left: 110px;
-    top: 0;
+    right: 2px;
+    top: 39px;
+}
+#email_message_subject, #email_message_body{    
+    width: 672px !important;
+}
+
+.sf_admin_form fieldset{
+    padding: 0 !important;
+    background-color: transparent !important;
+    border-radius: 0 !important;
 }
