--- a/web/css/dashboard.css
+++ b/web/css/dashboard.css
@@ -11,6 +11,14 @@
     padding: 5px 10px;
 }
 
+.dashboard-block h2 {
+text-transform: uppercase;
+}
+
+.even-row{
+    min-height: 40px;    
+}
+
 #dashboard_container .left{
     margin-right: 7px;
 }
