--- a/web/css/symfony.css
+++ b/web/css/symfony.css
@@ -14,12 +14,13 @@
     position: relative;
 }
 #sf_admin_heading, .sf_admin_heading{
-    height: 18px;
+    height: 25px;
 }
 #sf_admin_heading h3, .sf_admin_heading h3{
     color: #134D58;
-    font-size: 16px;
-    font-weight: normal;
+font-weight: 700;
+font-size: 12px;
+    text-transform: uppercase;
 }
 .pager-current{
     background-color: #134D58 !important;
