--- a/web/css/tutorplus.css
+++ b/web/css/tutorplus.css
@@ -167,8 +167,9 @@
 
 #top-menu a{
     padding: 10px;
-    font-size: 15px;
     display: block;
+    font-size: 12px;
+    text-transform: uppercase;
     height: 25px;
 }
 
@@ -1086,7 +1087,6 @@
     position: relative;
     display: block;
     clear: both;
-    min-height: 40px;
 }
 
 #activity_feeds .even-row{
