--- a/web/css/symfony.css
+++ b/web/css/symfony.css
@@ -17,13 +17,13 @@
     height: 15px;
 }
 #sf_admin_heading h3, .sf_admin_heading h3{
-    color: #134D58;
-font-weight: 700;
-font-size: 12px;
+    color: #0A798D;
+    font-weight: bold;
+    font-size: 12px;
     text-transform: uppercase;
 }
 .pager-current{
-    background-color: #134D58 !important;
+    background-color: #0A798D !important;
     color: #FFFFFF;
 }
 .sf_admin_pagination ul li a:hover{
@@ -34,7 +34,7 @@ font-size: 12px;
     cursor: pointer;
 }
 .sf_admin_pagination ul li a{
-    color: #134D58 !important;
+    color: #0A798D !important;
 }
 #sf_admin_form_container{
     display: table;
@@ -186,7 +186,7 @@ ul.sf_admin_td_actions li.sf_admin_action_delete{
     font-size: 12px;
     padding: 5px 30px;
     text-align: center;
-    color: #134D58;
+    color: #0A798D;
     margin-bottom: 10px;
 }
 
