--- a/web/css/left-menu.css
+++ b/web/css/left-menu.css
@@ -64,11 +64,7 @@
 }
 
 #left-column li.selected a{
-    color: #0A798D !important;
-}
-
-fdfd{
-    
+    color: #21616D !important;
 }
 
 #left-column ul a{
