--- a/web/css/colorbox/jquery.colorbox.css
+++ b/web/css/colorbox/jquery.colorbox.css
@@ -42,7 +42,7 @@
     text-align: left;
     width: 100%;
     height: 25px;
-    color: #0A798D;
+    color: #21616D;
     font-size: 15px;
     padding: 10px 10px 5px 20px
 }
