--- a/web/css/elements.css
+++ b/web/css/elements.css
@@ -4,6 +4,7 @@
     text-decoration: none;
     font-size: 12px;
     text-shadow: none;
+    line-height: 25px;
     font-family: 'Gotham SSm 4r', 'Gotham SSm A', 'Gotham SSm B', 'Helvetica Neue', Helvetica, Segoe, 'Segoe UI', 'Segoe WP', Calibri, Arial, clean, sans-serif;;
 }
 
@@ -17,7 +18,7 @@ body{
     font-size: 12px;
     height: 100%;
     width: 100%;
-    line-height: 1.8em;
+    line-height: 25px;
     margin: 0;
     padding: 0
 }
